Improve View on Mobile Device Align the guess box under the champion image Accept more proper formats when guessing Display proper names when answering correctly Fix Bloodmoon Fiddlesticks, Star Nemesis Fiddlesticks, and Praetorian Fiddlesticks loading screen image not loading

--- a/style.css
+++ b/style.css
@@ -7,6 +7,4 @@ body::before {
     background-size: cover;
     background-position: center;
     filter: blur(10px);
-    width: 100vw;
-    height: 100vh;
 }
